--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <div class=header>
-    <h1>私のホームページ</h1>
+    <h1>ありがとうございます。以上打ち合わせ営業お断り</h1>
     <div>せつめいせつめい</div>
   </div>
   <div class=main>
