--- a/rep01.html
+++ b/rep01.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>1週目のレポート ： 公大高専１年実習I-1</h1>
-    <div>1組n番 ニックネーム</div>
+    <div>4組33番 カルシウム1/2</div>
   </div>
   <div class=1week>
     <h2>第1週目</h2>
@@ -33,7 +33,7 @@
         1.内容<br>
         スクラッチを使って線を書くプログラムを書いた。<br>
         2.感想<br>
-        感想を自分で書く。<br>
+        小学生からスクラッチは体験していたけど、高専でスクラッチをするときに、キャラクタの本格的な動作設計や、動いたときに線を書いたりしたのは初体験で楽しく感じた。<br>
       </div>
     </div>
 
@@ -42,9 +42,9 @@
       <img src="game.png" alt="ゲーム" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        リンゴを猫が拾うようにプログラミングをした。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        猫が落ちるリンゴにふれたときにリンゴが消えるようにするプログラミングが以外に多くのプログラムを作成しなければならなくて、そこをどう軽量化するかが大事なのかなと感じた。<br>        
       </div>
     </div>
 
@@ -54,7 +54,7 @@
         <!-- 自分のホームページのURLに置き替える↓ -->
         <a href="https://tmhrdoi.github.io/website/">私のホームページ</a><br>
         1.内容<br>
-        ないようないよう<br>
+        見本のホームページをコピーし、自分なりに置き換える。<br>
         2.感想<br>
         かんそうかんそう<br>        
       </div>      
