--- a/rep01.html
+++ b/rep01.html
@@ -52,17 +52,17 @@
       <h3>1-3 ホームページ作成</h3>
       <div>
         <!-- 自分のホームページのURLに置き替える↓ -->
-        <a href="https://tmhrdoi.github.io/website/">私のホームページ</a><br>
+        <a href="https://tmhrdoi.github.io/website/">ありがとうございます。以上打ち合わせ営業お断り</a><br>
         1.内容<br>
         見本のホームページをコピーし、自分なりに置き換える。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        githubは基本英語なので、自分がちゃんとホームページをコピーできてるか不安になった。また、ホームページの第一印象がどれだけ大事かを知ることができた。<br>        
       </div>      
     </div>
     
   </div>
   <div class=footer>
-    作成日：2022年07月20日
+    作成日：2022年10月12日
   </div>
 </body>
 </html>
