--- a/rep01.html
+++ b/rep01.html
@@ -52,7 +52,7 @@
       <h3>1-3 ホームページ作成</h3>
       <div>
         <!-- 自分のホームページのURLに置き替える↓ -->
-        <a href="https://tmhrdoi.github.io/website/">ありがとうございます。以上打ち合わせ営業お断り</a><br>
+        <a href="https://hidano4.github.io/website/">ありがとうございます。以上打ち合わせ営業お断り</a><br>
         1.内容<br>
         見本のホームページをコピーし、自分なりに置き換える。<br>
         2.感想<br>
