--- a/rep02.html
+++ b/rep02.html
@@ -42,9 +42,9 @@
       <img src="ml.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
-        人工知能とはなにか、具体的なイメージを学んだ。<br>
+        機械がグーチョキパーを自動的に判別するプログラムを作成した。<br>
         2.感想<br>
-        人工知能という言葉は知っていても、ニューラルネット等、新しい機械学習の情報を知れて嬉しく感じた。<br>        
+        人工知能という言葉は知っていても、こんなにグーとチョキとパーをある程度正確に判別してくれることに喜びを感じた(ただし自分自身はグーとチョキとパーの写真を読み取らせてグループを作っただけ)。<br>        
       </div>
     </div>
     
@@ -54,13 +54,13 @@
         1.内容<br>
         VRゴーグルをつけてVR世界の会議室などを体験した<br>
         2.感想<br>
-        かんそうかんそう<br>
+        初めてVRゴーグルをつけてVRの世界を体験したけど、思ったよりリアルで、なによりVR空間にいることがゲームの中にいるような感覚があって楽しく感じた。<br>
       </div>
     </div>
     
   </div>
   <div class=footer>
-    作成日：2022年XX月XX日
+    作成日：2022年10月19日
   </div>
 </body>
 </html>
