--- a/rep03.html
+++ b/rep03.html
@@ -44,7 +44,7 @@
         1.内容<br>
         Webプログラミング道場の入門を途中まで作った。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        最初は複雑そうで時間がかかりそうなプログラミングだと思っていたが、いざやってみると思いの外(2)の最後まですんなりいけて嬉しく感じた。<br>
       </div>
     </div>
 
