--- a/rep03.html
+++ b/rep03.html
@@ -52,9 +52,9 @@
       <h3>3-2 VR体験</h3>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        VR空間でプログラムされたやつを実際にやってみた。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        まずVRをつけるだけで楽しかったけど、プログラムされた空間で移動したり、ボールを出したりして、面白いことをいろいろVR空間内ですることで、もっとVRに興味をもてた。<br>
       </div>
     </div>
   
